(Cards) Fix wrong margin between cards

--- a/statics/css/style_v2.sass
+++ b/statics/css/style_v2.sass
@@ -374,11 +374,12 @@ header
         bottom: 0
 
 .card
-    margin: 0px 40px
+    margin: 0px 10px
     border: 1px solid #707070
     padding: 10px
     position: relative
     height: 100%
+    box-sizing: border-box
 
     hr
         border: 1px solid rgba(112, 112, 112, 0.4)
@@ -470,6 +471,7 @@ main
     height: 100%
     display: flex
     align-items: stretch
+    margin: 20px 0
 
     .col, .col-1, .col-2, .col-3, .col-4, .col-5, .col-6, .col-7, .col-8, .col-9, .col-10, .col-11, .col-12
         width: 100%
